--- a/basecode.vcxproj.filters
+++ b/basecode.vcxproj.filters
@@ -121,5 +121,8 @@
     <ClInclude Include="include\tinyfiledialogs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ObjLoader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
