--- a/imgui.ini
+++ b/imgui.ini
@@ -4,17 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=13,13
-Size=320,223
+Pos=12,13
+Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=381,10
+Pos=987,27
 Size=550,680
-Collapsed=1
+Collapsed=0
 
 [Window][Another Window]
 Pos=60,60
 Size=198,71
+Collapsed=0
+
+[Window][Scene]
+Pos=0,3
+Size=374,758
 Collapsed=0
 
