--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=987,27
-Size=550,680
+Pos=671,72
+Size=783,680
 Collapsed=0
 
 [Window][Another Window]
@@ -19,7 +19,72 @@ Size=198,71
 Collapsed=0
 
 [Window][Scene]
-Pos=0,3
-Size=374,758
+Pos=1,0
+Size=377,320
 Collapsed=0
+DockId=0x00000001,0
+
+[Window][Objects]
+Pos=1,322
+Size=377,314
+Collapsed=0
+DockId=0x00000003,0
+
+[Table][0x49F8DCEA,3]
+RefScale=16
+Column 0  Weight=1.0000
+Column 1  Width=108
+Column 2  Width=162
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x47600645,3]
+RefScale=16
+Column 0  Width=54
+Column 1  Width=54
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=16
+Column 0  Width=54
+Column 1  Width=54
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xC179E37C,3]
+RefScale=16
+Column 0  Width=113 Sort=0v
+Column 1  Width=61
+Column 2  Width=-1
+
+[Table][0xA43C3885,3]
+RefScale=16
+Column 0  Width=45
+Column 1  Width=45
+Column 2  Width=45
+
+[Table][0x20DF7A63,4]
+RefScale=16
+Column 0  Width=31 Sort=0v
+Column 1  Width=51
+Column 2  Width=41
+Column 3  Weight=1.0000
+
+[Docking][Data]
+DockNode    ID=0x00000002 Pos=1,0 Size=377,636 Split=Y
+  DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=504,275 Selected=0xE192E354
+  DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=504,270 Selected=0x967E7699
 
