--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=671,72
+Pos=204,699
 Size=783,680
 Collapsed=0
 
@@ -19,14 +19,33 @@ Size=198,71
 Collapsed=0
 
 [Window][Scene]
-Pos=1,0
-Size=377,320
+Pos=386,17
+Size=1220,954
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Objects]
-Pos=1,322
-Size=377,314
+Pos=1223,0
+Size=378,507
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpace Demo]
+Size=1600,1061
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=260,126
+Size=485,450
+Collapsed=0
+
+[Window][Main]
+Pos=-1,2
+Size=368,433
+Collapsed=0
+
+[Window][Properties]
+Pos=1223,509
+Size=378,326
 Collapsed=0
 DockId=0x00000003,0
 
@@ -84,7 +103,7 @@ Column 2  Width=41
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockNode    ID=0x00000002 Pos=1,0 Size=377,636 Split=Y
-  DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=504,275 Selected=0xE192E354
-  DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=504,270 Selected=0x967E7699
+DockNode    ID=0x00000001 Pos=1223,0 Size=378,835 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=378,507 Selected=0x967E7699
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=378,326 Selected=0x199AB496
 
