model class changed to object class

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=204,699
+Pos=889,774
 Size=783,680
 Collapsed=0
 
@@ -24,8 +24,8 @@ Size=1220,954
 Collapsed=0
 
 [Window][Objects]
-Pos=1223,0
-Size=378,507
+Pos=1131,17
+Size=383,348
 Collapsed=0
 DockId=0x00000002,0
 
@@ -39,13 +39,13 @@ Size=485,450
 Collapsed=0
 
 [Window][Main]
-Pos=-1,2
-Size=368,433
+Pos=8,31
+Size=363,433
 Collapsed=0
 
 [Window][Properties]
-Pos=1223,509
-Size=378,326
+Pos=1131,367
+Size=383,342
 Collapsed=0
 DockId=0x00000003,0
 
@@ -102,8 +102,48 @@ Column 1  Width=51
 Column 2  Width=41
 Column 3  Weight=1.0000
 
+[Table][0x9B8E7538,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=16
+Column 0  Width=69
+Column 1  Width=69
+Column 2  Width=69
+
+[Table][0xDA36A7E0,6]
+RefScale=16
+Column 0  Width=31 Sort=0v
+Column 1  Width=51
+Column 2  Width=76
+Column 3  Width=65
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x45A0E60D,7]
+RefScale=16
+Column 0  Width=45
+Column 1  Width=98
+Column 2  Width=98
+Column 3  Width=98
+Column 4  Width=98
+Column 5  Width=98
+Column 6  Width=98
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1223,0 Size=378,835 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=378,507 Selected=0x967E7699
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=378,326 Selected=0x199AB496
+DockNode    ID=0x00000001 Pos=1131,17 Size=383,692 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=179,131 Selected=0x967E7699
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=179,129 Selected=0x199AB496
 
