--- a/basecode.vcxproj.filters
+++ b/basecode.vcxproj.filters
@@ -127,5 +127,8 @@
     <ClInclude Include="include\Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
