--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=889,774
-Size=783,680
+Pos=467,166
+Size=530,421
 Collapsed=0
 
 [Window][Another Window]
@@ -19,35 +19,43 @@ Size=198,71
 Collapsed=0
 
 [Window][Scene]
-Pos=386,17
-Size=1220,954
+Pos=0,-1
+Size=382,406
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Objects]
-Pos=1131,17
-Size=383,348
+Pos=0,407
+Size=382,355
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][DockSpace Demo]
 Size=1600,1061
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=260,126
+Pos=402,490
 Size=485,450
 Collapsed=0
 
 [Window][Main]
-Pos=8,31
-Size=363,433
+Pos=14,9
+Size=350,99
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1131,367
-Size=383,342
+Pos=1199,378
+Size=398,368
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000009,0
+
+[Window][Rendering]
+Pos=1199,3
+Size=398,373
+Collapsed=0
+DockId=0x00000008,0
 
 [Table][0x49F8DCEA,3]
 RefScale=16
@@ -143,7 +151,12 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1131,17 Size=383,692 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=179,131 Selected=0x967E7699
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=179,129 Selected=0x199AB496
+DockNode      ID=0x00000004 Pos=0,-1 Size=382,763 Split=Y
+  DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=360,414 Split=Y
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=363,217 Selected=0x5B0000FE
+    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=363,214 Selected=0xE192E354
+  DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=360,362 Selected=0x967E7699
+DockNode      ID=0x00000007 Pos=1199,3 Size=398,743 Split=Y
+  DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=360,153 Selected=0x5B3C8097
+  DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=360,151 Selected=0x199AB496
 
