--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=411,778
+Pos=502,692
 Size=528,796
 Collapsed=1
 
@@ -19,14 +19,14 @@ Size=198,71
 Collapsed=0
 
 [Window][Scene]
-Pos=0,2
-Size=376,426
+Pos=-1,1
+Size=424,426
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Objects]
-Pos=0,430
-Size=376,372
+Pos=-1,429
+Size=424,373
 Collapsed=0
 DockId=0x00000003,0
 
@@ -46,14 +46,14 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1198,317
-Size=398,426
+Pos=1202,257
+Size=401,542
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Rendering]
-Pos=1198,0
-Size=398,315
+Pos=1202,-1
+Size=401,256
 Collapsed=0
 DockId=0x00000008,0
 
@@ -151,12 +151,12 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode      ID=0x00000004 Pos=0,2 Size=376,800 Split=Y
+DockNode      ID=0x00000004 Pos=-1,1 Size=424,801 Split=Y
   DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=360,414 Split=Y
     DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=363,217 Selected=0x5B0000FE
     DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=363,214 Selected=0xE192E354
   DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=360,362 Selected=0x967E7699
-DockNode      ID=0x00000007 Pos=1198,0 Size=398,743 Split=Y
-  DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=360,315 Selected=0x5B3C8097
-  DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=360,426 Selected=0x199AB496
+DockNode      ID=0x00000007 Pos=1202,-1 Size=401,800 Split=Y
+  DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=360,256 Selected=0x5B3C8097
+  DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=360,542 Selected=0x199AB496
 
