resize window and backspace delete selected object

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,9 +9,9 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=544,581
+Pos=571,56
 Size=433,457
-Collapsed=0
+Collapsed=1
 
 [Window][Another Window]
 Pos=60,60
@@ -19,14 +19,14 @@ Size=198,71
 Collapsed=0
 
 [Window][Scene]
-Pos=-2,5
-Size=424,801
+Pos=-4,-2
+Size=424,149
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Objects]
-Pos=-2,432
-Size=424,373
+Pos=-4,149
+Size=424,650
 Collapsed=0
 DockId=0x00000003,0
 
@@ -46,14 +46,14 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1160,408
-Size=454,395
+Pos=1192,341
+Size=454,467
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Rendering]
-Pos=1160,0
-Size=454,406
+Pos=1192,5
+Size=454,334
 Collapsed=0
 DockId=0x00000007,0
 
@@ -151,12 +151,12 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode      ID=0x00000002 Pos=1160,0 Size=454,803 Split=Y
-  DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=210,68 Selected=0x5B3C8097
-  DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=210,66 Selected=0x199AB496
-DockNode      ID=0x00000004 Pos=-2,5 Size=424,801 Split=Y
+DockNode      ID=0x00000002 Pos=1192,5 Size=454,803 Split=Y
+  DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=210,334 Selected=0x5B3C8097
+  DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=210,467 Selected=0x199AB496
+DockNode      ID=0x00000004 Pos=-4,-2 Size=424,801 Split=Y
   DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=363,217 Selected=0x5B0000FE
   DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=363,214 Split=Y Selected=0xE192E354
-    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=424,426 Selected=0xE192E354
-    DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=424,373 Selected=0x967E7699
+    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=424,149 Selected=0xE192E354
+    DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=424,650 Selected=0x967E7699
 
