--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=189,117
+Size=1251,780
 Collapsed=0
 
 [Window][Hello, world!]
@@ -9,8 +9,8 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=571,56
-Size=433,457
+Pos=34,772
+Size=601,608
 Collapsed=1
 
 [Window][Another Window]
@@ -19,19 +19,18 @@ Size=198,71
 Collapsed=0
 
 [Window][Scene]
-Pos=-4,-2
-Size=424,149
+Pos=438,517
+Size=752,720
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Objects]
-Pos=-4,149
-Size=424,650
+Pos=0,180
+Size=390,620
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][DockSpace Demo]
-Size=1600,1061
+Size=1600,800
 Collapsed=0
 
 [Window][Example: Custom rendering]
@@ -43,19 +42,34 @@ Collapsed=0
 Pos=14,9
 Size=350,99
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000004,0
 
 [Window][Properties]
-Pos=1192,341
-Size=454,467
+Pos=1146,413
+Size=454,387
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Rendering]
+Pos=1146,22
+Size=454,389
 Collapsed=0
 DockId=0x00000008,0
 
-[Window][Rendering]
-Pos=1192,5
-Size=454,334
+[Window][DockSpace]
+Size=1600,800
 Collapsed=0
-DockId=0x00000007,0
+
+[Window][Current Scene]
+Pos=0,22
+Size=390,156
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Dockspace]
+Pos=0,0
+Size=1600,800
+Collapsed=0
 
 [Table][0x49F8DCEA,3]
 RefScale=16
@@ -151,12 +165,16 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode      ID=0x00000002 Pos=1192,5 Size=454,803 Split=Y
-  DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=210,334 Selected=0x5B3C8097
-  DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=210,467 Selected=0x199AB496
-DockNode      ID=0x00000004 Pos=-4,-2 Size=424,801 Split=Y
-  DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=363,217 Selected=0x5B0000FE
-  DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=363,214 Split=Y Selected=0xE192E354
-    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=424,149 Selected=0xE192E354
-    DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=424,650 Selected=0x967E7699
+DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,22 Size=1600,778 Split=X
+  DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=1144,778 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=390,778 Split=Y Selected=0x1355BE17
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=390,156 Selected=0x1355BE17
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=390,620 Selected=0x967E7699
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=752,778 CentralNode=1 Selected=0xE192E354
+  DockNode      ID=0x00000007 Parent=0x1ED03EE2 SizeRef=454,778 Split=Y Selected=0x5B3C8097
+    DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=454,389 Selected=0x5B3C8097
+    DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=454,387 Selected=0x199AB496
+DockSpace       ID=0x3BC79352 Pos=0,22 Size=1600,778 Split=X
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=423,778
+  DockNode      ID=0x00000009 Parent=0x3BC79352 SizeRef=1175,778 CentralNode=1
 
