--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=236,718
-Size=854,635
+Pos=445,629
+Size=613,516
 Collapsed=1
 
 [Window][Another Window]
@@ -24,8 +24,8 @@ Size=752,720
 Collapsed=0
 
 [Window][Objects]
-Pos=0,180
-Size=374,620
+Pos=0,412
+Size=373,388
 Collapsed=0
 DockId=0x00000005,0
 
@@ -45,16 +45,16 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Properties]
-Pos=1146,412
-Size=454,388
-Collapsed=0
-DockId=0x0000000A,0
-
-[Window][Rendering]
-Pos=1146,20
-Size=454,390
+Pos=1229,390
+Size=371,410
 Collapsed=0
 DockId=0x00000008,0
+
+[Window][Rendering]
+Pos=1229,20
+Size=371,368
+Collapsed=0
+DockId=0x00000007,0
 
 [Window][DockSpace]
 Size=1600,800
@@ -62,7 +62,7 @@ Collapsed=0
 
 [Window][Current Scene]
 Pos=0,20
-Size=374,158
+Size=373,390
 Collapsed=0
 DockId=0x00000003,0
 
@@ -70,6 +70,12 @@ DockId=0x00000003,0
 Pos=0,0
 Size=1600,800
 Collapsed=0
+
+[Window][Meshes]
+Pos=1229,390
+Size=371,410
+Collapsed=0
+DockId=0x00000008,1
 
 [Table][0x49F8DCEA,3]
 RefScale=16
@@ -166,14 +172,14 @@ Column 2  Weight=1.0000
 
 [Docking][Data]
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
-  DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=1144,778 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=374,778 Split=Y Selected=0x1355BE17
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=390,202 Selected=0x1355BE17
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=390,793 Selected=0x967E7699
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=768,778 CentralNode=1 Selected=0xE192E354
-  DockNode      ID=0x00000007 Parent=0x1ED03EE2 SizeRef=454,778 Split=Y Selected=0x5B3C8097
-    DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=454,389 Selected=0x5B3C8097
-    DockNode    ID=0x0000000A Parent=0x00000007 SizeRef=454,387 Selected=0x199AB496
+  DockNode      ID=0x0000000A Parent=0x1ED03EE2 SizeRef=1227,780 Split=X
+    DockNode    ID=0x00000001 Parent=0x0000000A SizeRef=373,780 Split=Y Selected=0x1355BE17
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=373,390 Selected=0x1355BE17
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=373,388 Selected=0x967E7699
+    DockNode    ID=0x00000002 Parent=0x0000000A SizeRef=852,780 CentralNode=1
+  DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=371,780 Split=Y Selected=0x5B3C8097
+    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=373,368 Selected=0x5B3C8097
+    DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=373,410 Selected=0x4A7568CE
 DockSpace       ID=0x3BC79352 Pos=0,22 Size=1600,778 Split=X
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=423,778
   DockNode      ID=0x00000009 Parent=0x3BC79352 SizeRef=1175,778 CentralNode=1
