--- a/imgui.ini
+++ b/imgui.ini
@@ -9,9 +9,9 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=445,629
+Pos=473,658
 Size=613,516
-Collapsed=1
+Collapsed=0
 
 [Window][Another Window]
 Pos=60,60
@@ -24,8 +24,8 @@ Size=752,720
 Collapsed=0
 
 [Window][Objects]
-Pos=0,412
-Size=373,388
+Pos=0,315
+Size=373,485
 Collapsed=0
 DockId=0x00000005,0
 
@@ -62,7 +62,7 @@ Collapsed=0
 
 [Window][Current Scene]
 Pos=0,20
-Size=373,390
+Size=373,293
 Collapsed=0
 DockId=0x00000003,0
 
@@ -174,12 +174,12 @@ Column 2  Weight=1.0000
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
   DockNode      ID=0x0000000A Parent=0x1ED03EE2 SizeRef=1227,780 Split=X
     DockNode    ID=0x00000001 Parent=0x0000000A SizeRef=373,780 Split=Y Selected=0x1355BE17
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=373,390 Selected=0x1355BE17
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=373,388 Selected=0x967E7699
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=373,293 Selected=0x1355BE17
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=373,485 Selected=0x967E7699
     DockNode    ID=0x00000002 Parent=0x0000000A SizeRef=852,780 CentralNode=1
   DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=371,780 Split=Y Selected=0x5B3C8097
     DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=373,368 Selected=0x5B3C8097
-    DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=373,410 Selected=0x4A7568CE
+    DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=373,410 Selected=0x199AB496
 DockSpace       ID=0x3BC79352 Pos=0,22 Size=1600,778 Split=X
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=423,778
   DockNode      ID=0x00000009 Parent=0x3BC79352 SizeRef=1175,778 CentralNode=1
