circular vertices added, scroll bug fixed

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,9 +9,9 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=473,658
+Pos=490,754
 Size=613,516
-Collapsed=0
+Collapsed=1
 
 [Window][Another Window]
 Pos=60,60
@@ -24,8 +24,8 @@ Size=752,720
 Collapsed=0
 
 [Window][Objects]
-Pos=0,315
-Size=373,485
+Pos=0,292
+Size=373,508
 Collapsed=0
 DockId=0x00000005,0
 
@@ -62,7 +62,7 @@ Collapsed=0
 
 [Window][Current Scene]
 Pos=0,20
-Size=373,293
+Size=373,270
 Collapsed=0
 DockId=0x00000003,0
 
@@ -76,6 +76,12 @@ Pos=1229,390
 Size=371,410
 Collapsed=0
 DockId=0x00000008,1
+
+[Window][Materials]
+Pos=0,292
+Size=373,508
+Collapsed=0
+DockId=0x00000005,1
 
 [Table][0x49F8DCEA,3]
 RefScale=16
@@ -174,8 +180,8 @@ Column 2  Weight=1.0000
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
   DockNode      ID=0x0000000A Parent=0x1ED03EE2 SizeRef=1227,780 Split=X
     DockNode    ID=0x00000001 Parent=0x0000000A SizeRef=373,780 Split=Y Selected=0x1355BE17
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=373,293 Selected=0x1355BE17
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=373,485 Selected=0x967E7699
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=373,270 Selected=0x1355BE17
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=373,508 Selected=0x967E7699
     DockNode    ID=0x00000002 Parent=0x0000000A SizeRef=852,780 CentralNode=1
   DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=371,780 Split=Y Selected=0x5B3C8097
     DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=373,368 Selected=0x5B3C8097
