--- a/basecode.vcxproj
+++ b/basecode.vcxproj
@@ -31,8 +31,8 @@
     <ClCompile Include="src\tinyfiledialogs.c" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\basic_shader.frag" />
-    <None Include="shaders\basic_shader.vs" />
+    <None Include="shaders\basic.frag" />
+    <None Include="shaders\basic.vs" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\LoadersManager.h" />
