--- a/basecode.vcxproj.filters
+++ b/basecode.vcxproj.filters
@@ -62,10 +62,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\basic_shader.frag">
+    <None Include="shaders\basic.frag">
       <Filter>shaders</Filter>
     </None>
-    <None Include="shaders\basic_shader.vs">
+    <None Include="shaders\basic.vs">
       <Filter>shaders</Filter>
     </None>
   </ItemGroup>
