--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=490,754
+Pos=439,698
 Size=613,516
 Collapsed=1
 
@@ -34,7 +34,7 @@ Size=1600,800
 Collapsed=0
 
 [Window][Example: Custom rendering]
-Pos=402,490
+Pos=777,17
 Size=485,450
 Collapsed=0
 
@@ -45,14 +45,14 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Properties]
-Pos=1229,390
-Size=371,410
+Pos=1215,390
+Size=385,410
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Rendering]
-Pos=1229,20
-Size=371,368
+Pos=1215,20
+Size=385,368
 Collapsed=0
 DockId=0x00000007,0
 
@@ -72,8 +72,8 @@ Size=1600,800
 Collapsed=0
 
 [Window][Meshes]
-Pos=1229,390
-Size=371,410
+Pos=1215,390
+Size=385,410
 Collapsed=0
 DockId=0x00000008,1
 
@@ -82,6 +82,26 @@ Pos=0,292
 Size=373,508
 Collapsed=0
 DockId=0x00000005,1
+
+[Window][Example: Simple layout]
+Pos=494,78
+Size=500,440
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=543,248
+Size=381,200
+Collapsed=0
+
+[Window][Stacked 2]
+Pos=694,360
+Size=211,80
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=439,36
+Size=608,794
+Collapsed=0
 
 [Table][0x49F8DCEA,3]
 RefScale=16
@@ -178,12 +198,12 @@ Column 2  Weight=1.0000
 
 [Docking][Data]
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
-  DockNode      ID=0x0000000A Parent=0x1ED03EE2 SizeRef=1227,780 Split=X
+  DockNode      ID=0x0000000A Parent=0x1ED03EE2 SizeRef=1213,780 Split=X
     DockNode    ID=0x00000001 Parent=0x0000000A SizeRef=373,780 Split=Y Selected=0x1355BE17
       DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=373,270 Selected=0x1355BE17
       DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=373,508 Selected=0x967E7699
-    DockNode    ID=0x00000002 Parent=0x0000000A SizeRef=852,780 CentralNode=1
-  DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=371,780 Split=Y Selected=0x5B3C8097
+    DockNode    ID=0x00000002 Parent=0x0000000A SizeRef=838,780 CentralNode=1
+  DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=385,780 Split=Y Selected=0x5B3C8097
     DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=373,368 Selected=0x5B3C8097
     DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=373,410 Selected=0x199AB496
 DockSpace       ID=0x3BC79352 Pos=0,22 Size=1600,778 Split=X
