--- a/basecode.vcxproj
+++ b/basecode.vcxproj
@@ -35,6 +35,7 @@
     <None Include="shaders\vertex\basic.vs" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\ModelLayer.h" />
     <ClInclude Include="include\LoadersManager.h" />
     <ClInclude Include="include\MtlLoader.h" />
     <ClInclude Include="include\Camera.h" />
