--- a/imgui.ini
+++ b/imgui.ini
@@ -24,10 +24,10 @@ Size=752,720
 Collapsed=0
 
 [Window][Objects]
-Pos=0,292
-Size=373,508
+Pos=0,355
+Size=372,445
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000B,0
 
 [Window][DockSpace Demo]
 Size=1600,800
@@ -45,16 +45,16 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Properties]
-Pos=1215,390
-Size=385,410
+Pos=1215,20
+Size=385,350
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
 
 [Window][Rendering]
 Pos=1215,20
-Size=385,368
+Size=385,350
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000007,1
 
 [Window][DockSpace]
 Size=1600,800
@@ -62,9 +62,9 @@ Collapsed=0
 
 [Window][Current Scene]
 Pos=0,20
-Size=373,270
+Size=372,333
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][Dockspace]
 Pos=0,0
@@ -72,16 +72,16 @@ Size=1600,800
 Collapsed=0
 
 [Window][Meshes]
-Pos=1215,390
-Size=385,410
+Pos=1215,372
+Size=385,428
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000008,0
 
 [Window][Materials]
-Pos=0,292
-Size=373,508
+Pos=0,355
+Size=372,445
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x0000000B,1
 
 [Window][Example: Simple layout]
 Pos=494,78
@@ -198,14 +198,14 @@ Column 2  Weight=1.0000
 
 [Docking][Data]
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
-  DockNode      ID=0x0000000A Parent=0x1ED03EE2 SizeRef=1213,780 Split=X
-    DockNode    ID=0x00000001 Parent=0x0000000A SizeRef=373,780 Split=Y Selected=0x1355BE17
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=373,270 Selected=0x1355BE17
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=373,508 Selected=0x967E7699
-    DockNode    ID=0x00000002 Parent=0x0000000A SizeRef=838,780 CentralNode=1
-  DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=385,780 Split=Y Selected=0x5B3C8097
-    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=373,368 Selected=0x5B3C8097
-    DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=373,410 Selected=0x199AB496
+  DockNode      ID=0x00000001 Parent=0x1ED03EE2 SizeRef=372,780 Split=Y Selected=0x1355BE17
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=372,333 Selected=0x1355BE17
+    DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=372,445 Selected=0x6AE1E39D
+  DockNode      ID=0x00000002 Parent=0x1ED03EE2 SizeRef=1226,780 Split=X
+    DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=1213,780 CentralNode=1
+    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=385,780 Split=Y Selected=0x199AB496
+      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=385,350 Selected=0x199AB496
+      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=385,428 Selected=0x4A7568CE
 DockSpace       ID=0x3BC79352 Pos=0,22 Size=1600,778 Split=X
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=423,778
   DockNode      ID=0x00000009 Parent=0x3BC79352 SizeRef=1175,778 CentralNode=1
