--- a/imgui.ini
+++ b/imgui.ini
@@ -9,9 +9,9 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=439,698
-Size=613,516
-Collapsed=1
+Pos=431,572
+Size=613,368
+Collapsed=0
 
 [Window][Another Window]
 Pos=60,60
@@ -46,15 +46,15 @@ DockId=0x00000004,0
 
 [Window][Properties]
 Pos=1215,20
-Size=385,350
+Size=385,390
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000003,0
 
 [Window][Rendering]
 Pos=1215,20
-Size=385,350
+Size=385,390
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000003,1
 
 [Window][DockSpace]
 Size=1600,800
@@ -72,10 +72,10 @@ Size=1600,800
 Collapsed=0
 
 [Window][Meshes]
-Pos=1215,372
-Size=385,428
+Pos=1215,412
+Size=385,388
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
 
 [Window][Materials]
 Pos=0,355
@@ -200,12 +200,12 @@ Column 2  Weight=1.0000
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
   DockNode      ID=0x00000001 Parent=0x1ED03EE2 SizeRef=372,780 Split=Y Selected=0x1355BE17
     DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=372,333 Selected=0x1355BE17
-    DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=372,445 Selected=0x6AE1E39D
+    DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=372,445 Selected=0x967E7699
   DockNode      ID=0x00000002 Parent=0x1ED03EE2 SizeRef=1226,780 Split=X
     DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=1213,780 CentralNode=1
     DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=385,780 Split=Y Selected=0x199AB496
-      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=385,350 Selected=0x199AB496
-      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=385,428 Selected=0x4A7568CE
+      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=385,390 Selected=0x199AB496
+      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=385,388 Selected=0x4A7568CE
 DockSpace       ID=0x3BC79352 Pos=0,22 Size=1600,778 Split=X
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=423,778
   DockNode      ID=0x00000009 Parent=0x3BC79352 SizeRef=1175,778 CentralNode=1
