--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=443,744
-Size=613,368
+Pos=432,666
+Size=613,567
 Collapsed=1
 
 [Window][Another Window]
@@ -24,8 +24,8 @@ Size=752,720
 Collapsed=0
 
 [Window][Objects]
-Pos=0,355
-Size=372,445
+Pos=0,275
+Size=372,525
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -62,7 +62,7 @@ Collapsed=0
 
 [Window][Current Scene]
 Pos=0,20
-Size=372,333
+Size=372,253
 Collapsed=0
 DockId=0x00000005,0
 
@@ -78,8 +78,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Materials]
-Pos=0,355
-Size=372,445
+Pos=0,275
+Size=372,525
 Collapsed=0
 DockId=0x0000000B,1
 
@@ -102,6 +102,12 @@ Collapsed=0
 Pos=439,36
 Size=608,794
 Collapsed=0
+
+[Window][Lighting]
+Pos=0,20
+Size=372,253
+Collapsed=0
+DockId=0x00000005,1
 
 [Table][0x49F8DCEA,3]
 RefScale=16
@@ -199,8 +205,8 @@ Column 2  Weight=1.0000
 [Docking][Data]
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
   DockNode      ID=0x00000001 Parent=0x1ED03EE2 SizeRef=372,780 Split=Y Selected=0x1355BE17
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=372,333 Selected=0x1355BE17
-    DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=372,445 Selected=0x967E7699
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=372,253 Selected=0x1355BE17
+    DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=372,525 Selected=0x967E7699
   DockNode      ID=0x00000002 Parent=0x1ED03EE2 SizeRef=1226,780 Split=X
     DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=1213,780 CentralNode=1
     DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=385,780 Split=Y Selected=0x199AB496
