--- a/imgui.ini
+++ b/imgui.ini
@@ -205,7 +205,7 @@ Column 2  Weight=1.0000
 [Docking][Data]
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
   DockNode      ID=0x00000001 Parent=0x1ED03EE2 SizeRef=372,780 Split=Y Selected=0x1355BE17
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=372,253 Selected=0x1355BE17
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=372,253 Selected=0x36FF2379
     DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=372,525 Selected=0x967E7699
   DockNode      ID=0x00000002 Parent=0x1ED03EE2 SizeRef=1226,780 Split=X
     DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=1213,780 CentralNode=1
