--- a/imgui.ini
+++ b/imgui.ini
@@ -210,7 +210,7 @@ DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
   DockNode      ID=0x00000002 Parent=0x1ED03EE2 SizeRef=1226,780 Split=X
     DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=1213,780 CentralNode=1
     DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=385,780 Split=Y Selected=0x199AB496
-      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=385,390 Selected=0x5B3C8097
+      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=385,390 Selected=0x199AB496
       DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=385,388 Selected=0x4A7568CE
 DockSpace       ID=0x3BC79352 Pos=0,22 Size=1600,778 Split=X
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=423,778
