change in UI, rendering options logic and fix warnings (pt I)

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
 Pos=189,117
-Size=1251,780
+Size=1251,720
 Collapsed=0
 
 [Window][Hello, world!]
@@ -9,8 +9,8 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=432,666
-Size=613,567
+Pos=405,761
+Size=530,607
 Collapsed=1
 
 [Window][Another Window]
@@ -19,15 +19,16 @@ Size=198,71
 Collapsed=0
 
 [Window][Scene]
-Pos=438,517
-Size=752,720
+Pos=0,20
+Size=7,5
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Objects]
-Pos=0,275
-Size=372,525
+Pos=0,27
+Size=7,5
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000002,0
 
 [Window][DockSpace Demo]
 Size=1600,800
@@ -42,19 +43,18 @@ Collapsed=0
 Pos=14,9
 Size=350,99
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Properties]
-Pos=1215,20
-Size=385,390
+Pos=17,20
+Size=15,5
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][Rendering]
-Pos=1215,20
-Size=385,390
+Pos=1199,20
+Size=401,391
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000007,1
 
 [Window][DockSpace]
 Size=1600,800
@@ -64,24 +64,23 @@ Collapsed=0
 Pos=0,20
 Size=372,253
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Dockspace]
 Pos=0,0
-Size=1600,800
+Size=32,32
 Collapsed=0
 
 [Window][Meshes]
-Pos=1215,412
-Size=385,388
+Pos=17,27
+Size=15,5
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000008,0
 
 [Window][Materials]
-Pos=0,275
-Size=372,525
+Pos=0,27
+Size=7,5
 Collapsed=0
-DockId=0x0000000B,1
+DockId=0x00000002,1
 
 [Window][Example: Simple layout]
 Pos=494,78
@@ -105,9 +104,15 @@ Collapsed=0
 
 [Window][Lighting]
 Pos=0,20
-Size=372,253
+Size=7,5
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000003,2
+
+[Window][Camera]
+Pos=0,20
+Size=7,5
+Collapsed=0
+DockId=0x00000003,1
 
 [Table][0x49F8DCEA,3]
 RefScale=16
@@ -203,16 +208,13 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
-  DockNode      ID=0x00000001 Parent=0x1ED03EE2 SizeRef=372,780 Split=Y Selected=0x1355BE17
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=372,253 Selected=0x1355BE17
-    DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=372,525 Selected=0x967E7699
-  DockNode      ID=0x00000002 Parent=0x1ED03EE2 SizeRef=1226,780 Split=X
-    DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=1213,780 CentralNode=1
-    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=385,780 Split=Y Selected=0x199AB496
-      DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=385,390 Selected=0x199AB496
-      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=385,388 Selected=0x4A7568CE
-DockSpace       ID=0x3BC79352 Pos=0,22 Size=1600,778 Split=X
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=423,778
-  DockNode      ID=0x00000009 Parent=0x3BC79352 SizeRef=1175,778 CentralNode=1
+DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=32,12 Split=X
+  DockNode      ID=0x00000009 Parent=0x1ED03EE2 SizeRef=1197,780 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=370,780 Split=Y Selected=0xE192E354
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=371,159 Selected=0xE192E354
+      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=371,156 Selected=0x967E7699
+    DockNode    ID=0x00000004 Parent=0x00000009 SizeRef=825,780 CentralNode=1
+  DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=401,780 Split=Y Selected=0x5B3C8097
+    DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=613,304 Selected=0x199AB496
+    DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=613,301 Selected=0x4A7568CE
 
