add missing glfw.pdb and fixed warnings (pt II)

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=405,755
+Pos=5,741
 Size=530,607
 Collapsed=1
 
@@ -20,13 +20,13 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,20
-Size=370,393
+Size=370,313
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Objects]
-Pos=0,415
-Size=370,385
+Pos=0,335
+Size=370,465
 Collapsed=0
 DockId=0x00000002,0
 
@@ -77,8 +77,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Materials]
-Pos=0,415
-Size=370,385
+Pos=0,335
+Size=370,465
 Collapsed=0
 DockId=0x00000002,1
 
@@ -104,13 +104,13 @@ Collapsed=0
 
 [Window][Lighting]
 Pos=0,20
-Size=370,393
+Size=370,313
 Collapsed=0
 DockId=0x00000003,2
 
 [Window][Camera]
 Pos=0,20
-Size=370,393
+Size=370,313
 Collapsed=0
 DockId=0x00000003,1
 
@@ -211,8 +211,8 @@ Column 2  Weight=1.0000
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
   DockNode      ID=0x00000009 Parent=0x1ED03EE2 SizeRef=1197,780 Split=X
     DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=370,780 Split=Y Selected=0xE192E354
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=371,159 Selected=0xE192E354
-      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=371,156 Selected=0x967E7699
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=371,313 Selected=0x36FF2379
+      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=371,465 Selected=0x967E7699
     DockNode    ID=0x00000004 Parent=0x00000009 SizeRef=825,780 CentralNode=1
   DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=401,780 Split=Y Selected=0x5B3C8097
     DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=613,304 Selected=0x199AB496
