--- a/basecode.vcxproj
+++ b/basecode.vcxproj
@@ -68,6 +68,7 @@
     <ProjectGuid>{9d4a3a8b-54ac-4468-85c1-94890fd31f27}</ProjectGuid>
     <RootNamespace>basecode</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>C3DViewer</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
