--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=373,404
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=5,741
+Pos=517,700
 Size=530,607
 Collapsed=1
 
@@ -211,7 +211,7 @@ Column 2  Weight=1.0000
 DockSpace       ID=0x1ED03EE2 Window=0x5B816B74 Pos=0,20 Size=1600,780 Split=X
   DockNode      ID=0x00000009 Parent=0x1ED03EE2 SizeRef=1197,780 Split=X
     DockNode    ID=0x00000001 Parent=0x00000009 SizeRef=370,780 Split=Y Selected=0xE192E354
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=371,313 Selected=0x36FF2379
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=371,313 Selected=0xE192E354
       DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=371,465 Selected=0x967E7699
     DockNode    ID=0x00000004 Parent=0x00000009 SizeRef=825,780 CentralNode=1
   DockNode      ID=0x00000006 Parent=0x1ED03EE2 SizeRef=401,780 Split=Y Selected=0x5B3C8097
